Minor alignment fixes. (#50)
* Minor alignment fixes.

* Update cancel workflow version

* Update backstopui.

--- a/pageComponents/Homepage/Homepage.module.css
+++ b/pageComponents/Homepage/Homepage.module.css
@@ -1,5 +1,4 @@
 .container {
-  width: 100vw;
   height: 100vh;
   position: relative;
   background-color: #343233;
